--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-    <h1>Tran Thi My Linh (Design front end)</h1>
+    <h1>Tran Thi My Linh (Design front end) <br>
+        <img src="/image/z2450181396101_91585a793a52597e07653e108e360d29.jpg" alt="">
+    </h1>
+
     <hr>
     <div class="information">
         <b>Name: </b> <i>Trân Thi My Linh</i> <br>
