--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Tran Thi My Linh (Design front end) <br>
+    <h1>Tran Thi My Linh (Front-end designer ) <br>
         <img src="image/z2450181396101_91585a793a52597e07653e108e360d29.jpg" alt="">
     </h1>
 
