2 file get mennu

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <a href="index.html">Return Home</a>
+    <a href="gallery.html">Watch Gallery</a>
     <h1>Tran Thi My Linh (Front-end designer ) <br>
         <img src="image/z2450181396101_91585a793a52597e07653e108e360d29.jpg" alt="">
     </h1>
